--- a/po/pot/multimedia.pot
+++ b/po/pot/multimedia.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-09-23 10:30+0200\n"
+"POT-Creation-Date: 2015-11-03 16:54+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -41,7 +41,9 @@ msgid "Warning:"
 msgstr ""
 
 #: en/multimedia.html+html.body.div.div.table.tr.td.div.p:29
-msgid "Some Flash content may harm your system."
+msgid ""
+"Be aware that Flash is not Open Source. Some Flash content may harm your "
+"system."
 msgstr ""
 
 #: en/multimedia.html+html.body.div.div.table.tr.td:33
@@ -57,7 +59,7 @@ msgstr ""
 #: en/multimedia.html+html.body.div.div.table.tr.td.p:37
 msgid ""
 "SolydXK does not come with the necessary packages pre-installed to play "
-"these encrypted DVDs"
+"these encrypted DVDs."
 msgstr ""
 
 #: en/multimedia.html+html.body.div.div.table.tr.td.p:38
