--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solydxk-welcome (1.1.4) solydxk; urgency=low
+
+  * Skip some pages for armhf architecture
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Tue, 17 Nov 2015 15:00:00 +0100
+
 solydxk-welcome (1.1.3) solydxk; urgency=low
 
   * Improved visibility of the donation button
